@@ -41,6 +41,11 @@ struct {
   { "struct ag_widget_binding", sizeof (struct ag_widget_binding) },
   { "AG_WidgetBindingType", sizeof (AG_WidgetBindingType) },
   { "enum ag_widget_binding_type", sizeof (enum ag_widget_binding_type) },
+  { "AG_Box *", sizeof (AG_Box *) },
+  { "struct ag_box *", sizeof (struct ag_box *) },
+  { "AG_Box", sizeof (AG_Box) },
+  { "struct ag_box", sizeof (struct ag_box) },
+  { "enum ag_box_type", sizeof (enum ag_box_type) },
   { "AG_WidgetClass *", sizeof (AG_WidgetClass *) },
   { "struct ag_widget_class *", sizeof (struct ag_widget_class *) },
   { "AG_WidgetClass", sizeof (AG_WidgetClass) },
