@@ -8,6 +8,7 @@ struct install_item insthier[] = {
   {INST_MKDIR, 0, 0, ctxt_slibdir, 0, 0, 0755},
   {INST_MKDIR, 0, 0, ctxt_repos, 0, 0, 0755},
   {INST_COPY, "ag_draw.c", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "ag_event.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "ag_surface.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "ag_unit.c", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "ag_widget.c", 0, ctxt_repos, 0, 0, 0644},
@@ -33,6 +34,8 @@ struct install_item insthier[] = {
   {INST_COPY, "agar-gui-unit.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-view.ads", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-view.ads", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-box.ads", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-box.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.ads", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.ads", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-window.ads", 0, ctxt_repos, 0, 0, 0644},
@@ -51,6 +54,8 @@ struct install_item insthier[] = {
   {INST_COPY, "agar-gui-unit.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-view.adb", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-view.adb", 0, ctxt_incdir, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-box.adb", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-box.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.adb", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.adb", 0, ctxt_incdir, 0, 0, 0644},
   {INST_COPY, "agar-gui-window.adb", 0, ctxt_repos, 0, 0, 0644},
@@ -77,6 +82,8 @@ struct install_item insthier[] = {
   {INST_COPY, "agar-gui-unit.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-gui-view.ali", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-view.ali", 0, ctxt_incdir, 0, 0, 0444},
+  {INST_COPY, "agar-gui-widget-box.ali", 0, ctxt_repos, 0, 0, 0644},
+  {INST_COPY, "agar-gui-widget-box.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-gui-widget.ali", 0, ctxt_repos, 0, 0, 0644},
   {INST_COPY, "agar-gui-widget.ali", 0, ctxt_incdir, 0, 0, 0444},
   {INST_COPY, "agar-gui-window.ali", 0, ctxt_repos, 0, 0, 0644},
